# social-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.mock  LICENSE  Makefile  README.md  Social API — Rust Microservice.md  docker-compose.test.yml  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml  coverage.yml  release.yml
crates/mock-services/: Cargo.toml  build.rs
crates/mock-services/src/: content.rs  data.rs  grpc_content.rs  grpc_profile.rs  main.rs  profile.rs  proto.rs
crates/shared/: Cargo.toml
crates/shared/src/: cursor.rs  errors.rs  lib.rs  types.rs
crates/social-api/: Cargo.toml  build.rs
crates/social-api/src/: auth.rs  cache.rs  config.rs  content.rs  db.rs  errors.rs  health.rs  lib.rs  logging.rs  main.rs  openapi.rs  proto.rs  realtime.rs  repositories.rs  server.rs  shutdown.rs  state.rs  test_containers.rs
crates/social-api/src/cache/: manager.rs
crates/social-api/src/clients/: circuit_breaker.rs  content_client.rs  grpc_content_client.rs  grpc_profile_client.rs  metrics.rs  mod.rs  profile_client.rs
crates/social-api/src/extractors/: auth.rs  content_path.rs  mod.rs
crates/social-api/src/grpc/: convert.rs  error.rs  health_service.rs  likes_service.rs  mod.rs
crates/social-api/src/grpc/interceptors/: auth.rs  metrics.rs  rate_limit.rs  request_id.rs
crates/social-api/src/handlers/: health.rs  likes.rs  metrics_handler.rs  mod.rs  stream.rs
crates/social-api/src/middleware/: error_context.rs  inflight.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs
crates/social-api/src/repositories/: like_repository.rs  mod.rs
crates/social-api/src/services/: like_commands.rs  like_count_cache.rs  like_events.rs  like_queries.rs  like_service.rs  mod.rs  pubsub_manager.rs
crates/social-api/src/tasks/: db_pool_metrics.rs  leaderboard_refresh.rs  mod.rs
crates/social-api/tests/: concurrency_stress_test.rs  graceful_shutdown_test.rs  grpc_test.rs  http_test.rs  integration_test.rs  leaderboard_stress_test.rs  stream_test.rs
crates/social-api/tests/common/: compose.rs  infra.rs  mod.rs
docs/plans/: 2026-03-05-circuit-breaker-fixes.md  2026-03-05-graceful-shutdown.md  2026-03-05-observability-stack-design.md  2026-03-05-observability-stack-plan.md  2026-03-05-openapi-utoipa-integration.md  2026-03-06-coverage-90-percent-design.md  2026-03-06-like-service-circuit-breaker-optimization-impl.md  2026-03-06-like-service-circuit-breaker-optimization.md  2026-03-06-security-audit.md  2026-03-06-security-fixes-plan.md  2026-03-06-unit-test-traits.md  2026-03-07-audit-fixes.md  2026-03-08-extended-caching-design.md  2026-03-08-moka-l1-cache-design.md  2026-03-09-bug-fixes.md  2026-03-09-db-optimization-design.md  2026-03-09-db-optimization-plan.md
env/: production.env  stress.env
k6/: README.md  grpc_load_test.js  load_test.js  quick_all_transports.js  stress_test.js  test.js
migrations/: 001_create_likes.sql  002_create_like_counts.sql  003_add_leaderboard_index.sql  003_replace_brin_with_btree.sql
monitoring/grafana/dashboards/: social-api-overview.json
monitoring/grafana/provisioning/alerting/: alerts.yml
monitoring/grafana/provisioning/dashboards/: provider.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml  rules.yml
proto/internal/v1/: content.proto  profile.proto
proto/social/v1/: common.proto  health.proto  likes.proto
scripts/: pre-commit
