[package]
name = "mock-services"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mock-services"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
