[package]
name = "social-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "social-api"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging & tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"
futures = "0.3"
